<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/overall_padding"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.fragments.DetailsFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/progress_bar_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/country_details_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_dp"
        android:text="@string/no_character_details_found"
        android:textSize="@dimen/progress_bar_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linear_layout_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/flag_image_view"
            android:layout_width="280dp"
            android:layout_height="140dp"
            android:src="@mipmap/ic_launcher"
            android:importantForAccessibility="no"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--This layout represents the name of the country-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/overall_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_country"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/country_title"/>

        </LinearLayout>

        <!--This layout represents the capital-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/overall_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/capitalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/capital_name"/>

        </LinearLayout>

        <!--This layout represents the region-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/overall_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/regionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_name"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <!--This layout represents the currencies-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/overall_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencies"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currenciesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <!--This layout represents the offical languages-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/overall_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/official_languages"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/officialLanguagesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <!--This layout represents the phone codes-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/overall_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calling_code_label"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneCodesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calling_code_label"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>