<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/light_green"
    app:cardCornerRadius="12dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/flag_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text"
            android:text="@string/country_title"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/flag_image_view"
            app:layout_constraintBottom_toTopOf="@id/capital_text"/>

        <TextView
            android:id="@+id/capital_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text"
            android:text="@string/capital_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/country_text"
            app:layout_constraintStart_toEndOf="@id/flag_image_view"
            app:layout_constraintBottom_toTopOf="@id/region_text"/>

        <TextView
            android:id="@+id/region_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text"
            android:text="@string/region_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/capital_text"
            app:layout_constraintStart_toEndOf="@id/flag_image_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
